--- a/main/index.html
+++ b/main/index.html
@@ -100,8 +100,8 @@
               <div class="icon"><i class="fa fa-gears"></i></div>
               <h4 class="title"><a href="">Production ready</a></h4>
               <p class="description">
-                Even if MetWork is a really new product on the internet, it is used in production in different
-                forms since 2012.
+                Even if MetWork is a really new product on the internet, it is used in production (24 hours a day, 7 days a week) 
+                in different forms since 2012 
               </p>
             </div>
 
