--- a/main/index.html
+++ b/main/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h2 class="title2">An opensource framework for building Linux operational server systems in Meteorology, IoT or other domains.</h1>
+                  <h2 class="title2">An opensource framework for building Linux production systems in Meteorology, IoT or other domains.</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -185,7 +185,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h2 class="title2">Originaly designed for domains around the data (Meteorology, IoT...) but can be useful in many other contexts !</h2>
+                  <h2 class="title2">Originally designed for domains around the data (Meteorology, IoT...) but can be useful in many other contexts !</h2>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -230,10 +230,10 @@
                 <h4 class="sec-head">A few words about MetWork Framework</h4>
               </a>
               <p>
-              MetWork (as METeorological frameWORK) was originaly built by <a href="https://en.wikipedia.org/wiki/M%C3%A9t%C3%A9o-France">Météo-France</a> as the core of its new weather forecasting workstation.
+              MetWork (as METeorological frameWORK) was originally built by <a href="https://en.wikipedia.org/wiki/M%C3%A9t%C3%A9o-France">Météo-France</a> as the core of its new weather forecasting workstation.
               </p>
               <p>
-              As this framework was successfull internaly, even for developping things far away from its original domain, it has been deciced recently to release it as an independant product under a very permissive BSD license and to maintain it through a <a href="https://github.com/metwork-framework">truly open process</a>.
+              As this framework was successful internally, even for developing things far away from its original domain, it has been decided recently to release it as an independent product under a very permissive BSD license and to maintain it through a <a href="https://github.com/metwork-framework">truly open process</a>.
               </p>
               <ul>
                 <li>
@@ -243,7 +243,7 @@
                   <i class="fa fa-linux"></i> Free and Open
                 </li>
                 <li>
-                  <i class="fa fa-thermometer"></i>  Originaly designed for Meteorology or IoT
+                  <i class="fa fa-thermometer"></i>  Originally designed for Meteorology or IoT
                 </li>
               </ul>
             </div>
@@ -275,9 +275,9 @@
                   <a class="services-icon" href="#">
 											<i class="fa fa-linux"></i>
 										</a>
-                  <h4>Recent softwares Linux add-on</h4>
+                  <h4>Recent software Linux add-on</h4>
                   <p>
-                  MetWork contains a "dependencies package" ridiculously easy to install which add to an entreprise Linux distribution plenty of recent softwares, especially
+                  MetWork contains a "dependencies package" ridiculously easy to install which add to an enterprise Linux distribution plenty of recent software, especially
                                   for scientific and meteorology domain.
                   </p>
                 </div>
@@ -330,7 +330,7 @@
 										</a>
                   <h4>Webservices framework</h4>
                   <p>
-                  With the "webservices framework", you are able to quickly build some REST micro-services as plugins with uptodate technologies like "asynchronous Python3", "nodejs"
+                  With the "webservices framework", you are able to quickly build some REST micro-services as plugins with up-to-date technologies like "asynchronous Python3", "nodejs"
                                   or with robust and standard Python2 or Python3 synchronous workers.
                   </p>
                 </div>
@@ -350,7 +350,7 @@
                   <h4>Webservices QOS framework</h4>
                   <p>
                   &lt;Soon&gt;Thanks to this part of MetWork, you can build a "production ready" webservices cluster with a kind of integrated http router to implement advanced business rules
-                  for rate limiting, throtting, priority handling...&lt;/Soon&gt;
+                  for rate limiting, throttling, priority handling...&lt;/Soon&gt;
                   </p>
                 </div>
               </div>
