--- a/main/index.html
+++ b/main/index.html
@@ -565,7 +565,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
               -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>, version: {{DRONE_COMMIT}}
             </div>
           </div>
         </div>
