feat: add some links

--- a/main/index.html
+++ b/main/index.html
@@ -77,7 +77,7 @@
                     <a class="page-scroll" href="#home">Home</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#about">About</a>
+                      <a class="page-scroll" href="#about">About</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#services">Features</a>
@@ -89,17 +89,20 @@
                   -->
                   <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Links<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a href="https://github.com/metwork-framework">GitHub Organization</a></li>
-                      <li><a href="https://gitter.im/metwork-framework">Gitter community</a></li>
-                      <li><a href="https://twitter.com/metwork_project">Twitter account</a></li>
-                      <li><a href="https://medium.com/metwork-framework">Medium blog</a></li>
+                      <li><a target="_blank" href="https://github.com/metwork-framework">GitHub Organization&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a></li>
+                      <li><a target="_blank" href="https://gitter.im/metwork-framework">Gitter community&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a></li>
+                      <li><a target="_blank" href="https://twitter.com/metwork_project">Twitter account&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a></li>
+                      <li><a target="_blank" href="https://medium.com/metwork-framework">Medium blog&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a></li>
                     </ul>
                   </li>
                   <li>
-                    <a target="_blank" href="https://medium.com/metwork-framework">Blog</a>
+                    <a class="page-scroll" href="#contact">Contact</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a target="_blank" href="https://medium.com/metwork-framework">Blog&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+                  </li>
+                  <li>
+                      <a target="_blank" href="https://github.com/metwork-framework">GitHub Organization&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                   </li>
                 </ul>
               </div>
@@ -280,6 +283,7 @@
                   MetWork contains a "dependencies package" ridiculously easy to install which add to an enterprise Linux distribution plenty of recent software, especially
                                   for scientific and meteorology domain.
                   </p>
+                  <a href="https://github.com/metwork-framework/mfext/blob/master/README.md#mfext" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                 </div>
               </div>
               <!-- end about-details -->
