feat: add mfdata link

--- a/main/index.html
+++ b/main/index.html
@@ -301,6 +301,7 @@
                   With the "incoming files" processing framework, you can define a set of actions (you can provide as plugins) to easily build a custom but robust stream
                                   processing workflow for your incoming files.
                   </p>
+                  <a href="https://github.com/metwork-framework/mfdata/blob/master/README.md#mfdata" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                 </div>
               </div>
               <!-- end about-details -->
