build: some details

--- a/main/index.html
+++ b/main/index.html
@@ -280,7 +280,7 @@
 										</a>
                   <h4>Recent software Linux add-on</h4>
                   <p>
-                  MetWork contains a "dependencies package" ridiculously easy to install which add to an enterprise Linux distribution plenty of recent software, especially
+                  MetWork contains a "dependencies package" (named <strong>mfext</strong>) ridiculously easy to install which add to a Linux distribution (including old ones) plenty of recent software, especially
                                   for scientific and meteorology domain.
                   </p>
                   <a href="https://github.com/metwork-framework/mfext/blob/master/README.md#mfext" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
@@ -298,7 +298,7 @@
 										</a>
                   <h4>Incoming files processing framework</h4>
                   <p>
-                  With the "incoming files" processing framework, you can define a set of actions (you can provide as plugins) to easily build a custom but robust stream
+                  With the "incoming files" processing framework (named <strong>mfdata</strong>), you can define a set of actions (you can provide as plugins) to easily build a custom but robust stream
                                   processing workflow for your incoming files.
                   </p>
                   <a href="https://github.com/metwork-framework/mfdata/blob/master/README.md#mfdata" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
@@ -317,7 +317,7 @@
 										</a>
                   <h4>"Geospatial ready" storage framework</h4>
                   <p>
-                  With this MetWork part, by providing your schema as a plugin, you can easily build a storage system based on SQL with some geospatial extensions and/or on NoSQL services (for
+                  With this MetWork part, (named <strong>mfbase</strong>) by providing your schema as a plugin, you can easily build a storage system based on SQL with some geospatial extensions and/or on NoSQL services (for
                                   dealing with big binary files for example).
                   </p>
                 </div>
@@ -325,6 +325,10 @@
               <!-- end about-details -->
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="services-contents">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <!-- end col-md-4 -->
             <div class=" about-move">
@@ -335,7 +339,7 @@
 										</a>
                   <h4>Webservices framework</h4>
                   <p>
-                  With the "webservices framework", you are able to quickly build some REST micro-services as plugins with up-to-date technologies like "asynchronous Python3", "nodejs"
+                  With the "webservices framework" (named <strong>mfserv</strong>), you are able to quickly build some REST micro-services as plugins with up-to-date technologies like "asynchronous Python3", "nodejs"
                                   or with robust and standard Python2 or Python3 synchronous workers.
                   </p>
                 </div>
@@ -354,8 +358,8 @@
 										</a>
                   <h4>Webservices QOS framework</h4>
                   <p>
-                  &lt;Soon&gt;Thanks to this part of MetWork, you can build a "production ready" webservices cluster with a kind of integrated http router to implement advanced business rules
-                  for rate limiting, throttling, priority handling...&lt;/Soon&gt;
+                  <strong>&lt;Soon&gt;</strong>Thanks to this part of MetWork, you can build a "production ready" webservices cluster with a kind of integrated http router to implement advanced business rules
+                  for rate limiting, throttling, priority handling...<strong>&lt;/Soon&gt;</strong>
                   </p>
                 </div>
               </div>
@@ -373,8 +377,7 @@
 										</a>
                   <h4>Monitoring framework</h4>
                   <p>
-                  Last but not least, all MetWork parts can send metrics and logs to an integrated monitoring module which provide modern dashboards to diagnose what's going on
-                                  your system. Of course, you can provides your own metrics and dashboards.
+                  Last but not least, all MetWork parts can send metrics and logs to an integrated monitoring module (named <strong>mfadmin</strong>) which provide modern dashboards to diagnose what's going on your system. Of course, you can provides your own metrics and dashboards.
                   </p>
                 </div>
               </div>
