--- a/main/index.html
+++ b/main/index.html
@@ -77,10 +77,10 @@
                     <a class="page-scroll" href="#home">Home</a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#about">About</a>
-                  </li>
-                  <li>
                     <a class="page-scroll" href="#services">Features</a>
+                  </li>                  
+                  <li>
+                      <a class="page-scroll" href="#about">About</a>
                   </li>
                   <!--
                   <li>
@@ -138,12 +138,12 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h2 class="title2">An opensource framework for building Linux production systems in Meteorology, IoT or other domains.</h1>
+                  <h2 class="title2">Save time in building, running and monitoring your applications</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Features</a>
-                  <a class="ready-btn page-scroll" href="#about">Learn More</a>
+                  <a class="ready-btn page-scroll" href="https://lperez31.github.io/metwork_getting_started/">Get Started</a>
                 </div>
               </div>
             </div>
@@ -163,12 +163,12 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h2 class="title2">Build your own system with our "battle tested" software bricks</h2>
+                  <h2 class="title2">Build production ready systems with "battle tested" software bricks</h2>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Features</a>
-                  <a class="ready-btn page-scroll" href="#about">Learn More</a>
+                  <a class="ready-btn page-scroll" href="https://lperez31.github.io/metwork_getting_started/">Get Started</a>
                 </div>
               </div>
             </div>
@@ -188,12 +188,12 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h2 class="title2">Originally designed for domains around the data (Meteorology, IoT...) but can be useful in many other contexts !</h2>
+                  <h2 class="title2">Fully open source!</h2>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Features</a>
-                  <a class="ready-btn page-scroll" href="#about">Learn More</a>
+                  <a class="ready-btn page-scroll" href="https://lperez31.github.io/metwork_getting_started/">Get Started</a>
                 </div>
               </div>
             </div>
@@ -203,6 +203,132 @@
     </div>
   </div>
   <!-- End Slider Area -->
+
+  <!-- Start Service area -->
+  <div id="services" class="services-area area-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="section-headline services-head text-center">
+            <h2>Features</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="services-contents">
+          <!-- Start Left services -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <!-- end col-md-4 -->
+            <div class=" about-move">
+              <div class="services-details">
+                <div class="single-services">
+                  <a class="services-icon" href="#">
+											<i class="fa fa-cloud-download"></i>
+										</a>
+                  <h4>Webservices framework</h4>
+                  <p>
+                  Quickly build REST micro-services, websites and APIs with the <strong>mfserv</strong> module. It supports up-to-date technologies like "asynchronous Python3", nodejs and Python-Django
+                                  as well as standard Python2 or Python3 synchronous workers.
+                  </p>
+                </div>
+              </div>
+              <!-- end about-details -->
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <!-- end col-md-4 -->
+            <div class=" about-move">
+              <div class="services-details">
+                <div class="single-services">
+                  <a class="services-icon" href="#">
+											<i class="fa fa-database"></i>
+										</a>
+                  <h4>Database bootstraping</h4>
+                  <p>
+                  The <strong>mfbase</strong> module will get you started with a database in a few minutes. No heavy database administrator work needed! A fully functional database automatically configured for all your needs: geospatial extensions, NoSQL, big files storage... Supports PostgreSQL and Webdav.
+                  </p>
+                </div>
+              </div>
+              <!-- end about-details -->
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+              <!-- end col-md-4 -->
+              <div class=" about-move">
+                <div class="services-details">
+                  <div class="single-services">
+                    <a class="services-icon" href="#">
+                        <i class="fa fa-road"></i>
+                      </a>
+                    <h4>Easy deployment</h4>
+                    <p>
+                    When you finish developing, MetWork Framework provides tools for packaging your code with all its dependencies and configuration in one file. Deployment is as easy as putting this file on your production servers!
+                    </p>
+                  </div>
+                </div>
+                <!-- end about-details -->
+              </div>
+          </div>  
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="services-contents">
+          <div class="col-md-4 col-sm-4 col-xs-12">
+              <!-- end col-md-4 -->
+              <div class=" about-move">
+                <div class="services-details">
+                  <div class="single-services">
+                    <a class="services-icon" href="#">
+                        <i class="fa fa-ambulance"></i>
+                      </a>
+                    <h4>Super easy monitoring</h4>
+                    <p>
+                    Out of the box monitoring! The <strong>mfadmin</strong> module gives you dahsboards to explore metrics and logs of the system, of the middlewares and of your applications.
+                    </p>
+                  </div>
+                </div>
+                <!-- end about-details -->
+              </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+              <div class="about-move">
+                <div class="services-details">
+                  <div class="single-services">
+                    <a class="services-icon" href="#">
+                        <i class="fa fa-file"></i>
+                      </a>
+                    <h4>Incoming files processing framework</h4>
+                    <p>
+                    Build custom workflows to process incoming files, with the <strong>mfdata</strong> module.
+                    </p>
+                    <a href="https://github.com/metwork-framework/mfdata/blob/master/README.md#mfdata" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+                  </div>
+                </div>
+                <!-- end about-details -->
+              </div>
+          </div>  
+          <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="about-move">
+                  <div class="services-details">
+                    <div class="single-services">
+                      <a class="services-icon" href="#">
+                          <i class="fa fa-linux"></i>
+                        </a>
+                      <h4>Recent software Linux add-on</h4>
+                      <p>
+                      The <strong>mfext</strong> module is a "dependencies package". It adds plenty of recent software to a Linux distribution (including old ones), for developers and scientists. You will never miss a library again on your development and production servers!
+                      </p>
+                      <a href="https://github.com/metwork-framework/mfext/blob/master/README.md#mfext" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+                    </div>
+                  </div>
+                  <!-- end about-details -->
+                </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Service area -->
 
   <!-- Start About area -->
   <div id="about" class="about-area area-padding">
@@ -233,10 +359,13 @@
                 <h4 class="sec-head">A few words about MetWork Framework</h4>
               </a>
               <p>
-              MetWork (as METeorological frameWORK) was originally built by <a href="https://en.wikipedia.org/wiki/M%C3%A9t%C3%A9o-France">Météo-France</a> as the core of its new weather forecasting workstation.
+              MetWork Framework was originally built by <a href="https://en.wikipedia.org/wiki/M%C3%A9t%C3%A9o-France">Météo-France</a> as the core of its weather forecasting workstation.
               </p>
               <p>
-              As this framework was successful internally, even for developing things far away from its original domain, it has been decided recently to release it as an independent product under a very permissive BSD license and to maintain it through a <a href="https://github.com/metwork-framework">truly open process</a>.
+              This framework has been very successful within the organization, even for developing things far away from its original domain. It benefits from years of build and run experience for critical 24/7 meteorological systems. Software and APIs powered by MetWork Framework are used daily by hundreds of Météo-France forecasters and by millions of end-users.
+              </p>
+              <p>
+              Météo-France has released MetWork Framework as an open source software, under a very permissive BSD license. <a href="https://github.com/metwork-framework">MetWork Framework source code on github</a>.
               </p>
               <ul>
                 <li>
@@ -244,9 +373,6 @@
                 </li>
                 <li>
                   <i class="fa fa-linux"></i> Free and Open
-                </li>
-                <li>
-                  <i class="fa fa-thermometer"></i>  Originally designed for Meteorology or IoT
                 </li>
               </ul>
             </div>
@@ -257,138 +383,6 @@
     </div>
   </div>
   <!-- End About area -->
-
-  <!-- Start Service area -->
-  <div id="services" class="services-area area-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline services-head text-center">
-            <h2>Features</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="services-contents">
-          <!-- Start Left services -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-											<i class="fa fa-linux"></i>
-										</a>
-                  <h4>Recent software Linux add-on</h4>
-                  <p>
-                  MetWork contains a "dependencies package" (named <strong>mfext</strong>) ridiculously easy to install which add to a Linux distribution (including old ones) plenty of recent software, especially
-                                  for scientific and meteorology domain.
-                  </p>
-                  <a href="https://github.com/metwork-framework/mfext/blob/master/README.md#mfext" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-											<i class="fa fa-file"></i>
-										</a>
-                  <h4>Incoming files processing framework</h4>
-                  <p>
-                  With the "incoming files" processing framework (named <strong>mfdata</strong>), you can define a set of actions (you can provide as plugins) to easily build a custom but robust stream
-                                  processing workflow for your incoming files.
-                  </p>
-                  <a href="https://github.com/metwork-framework/mfdata/blob/master/README.md#mfdata" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-											<i class="fa fa-database"></i>
-										</a>
-                  <h4>"Geospatial ready" storage framework</h4>
-                  <p>
-                  With this MetWork part, (named <strong>mfbase</strong>) by providing your schema as a plugin, you can easily build a storage system based on SQL with some geospatial extensions and/or on NoSQL services (for
-                                  dealing with big binary files for example).
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="services-contents">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-											<i class="fa fa-cloud-download"></i>
-										</a>
-                  <h4>Webservices framework</h4>
-                  <p>
-                  With the "webservices framework" (named <strong>mfserv</strong>), you are able to quickly build some REST micro-services as plugins with up-to-date technologies like "asynchronous Python3", "nodejs"
-                                  or with robust and standard Python2 or Python3 synchronous workers.
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <!-- End Left services -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-											<i class="fa fa-road"></i>
-										</a>
-                  <h4>Webservices QOS framework</h4>
-                  <p>
-                  <strong>&lt;Soon&gt;</strong>Thanks to this part of MetWork, you can build a "production ready" webservices cluster with a kind of integrated http router to implement advanced business rules
-                  for rate limiting, throttling, priority handling...<strong>&lt;/Soon&gt;</strong>
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <!-- End Left services -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-											<i class="fa fa-ambulance"></i>
-										</a>
-                  <h4>Monitoring framework</h4>
-                  <p>
-                  Last but not least, all MetWork parts can send metrics and logs to an integrated monitoring module (named <strong>mfadmin</strong>) which provide modern dashboards to diagnose what's going on your system. Of course, you can provides your own metrics and dashboards.
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Service area -->
 
   <!-- Faq area start -->
   <!--
