--- a/main/index.html
+++ b/main/index.html
@@ -143,7 +143,7 @@
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Features</a>
-                  <a class="ready-btn page-scroll" href="https://lperez31.github.io/metwork_getting_started/">Get Started</a>
+                  <a class="ready-btn page-scroll" href="https://metwork-framework.github.io/quickstart/">Get Started</a>
                 </div>
               </div>
             </div>
@@ -168,7 +168,7 @@
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Features</a>
-                  <a class="ready-btn page-scroll" href="https://lperez31.github.io/metwork_getting_started/">Get Started</a>
+                  <a class="ready-btn page-scroll" href="https://metwork-framework.github.io/quickstart/">Get Started</a>
                 </div>
               </div>
             </div>
@@ -193,7 +193,7 @@
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Features</a>
-                  <a class="ready-btn page-scroll" href="https://lperez31.github.io/metwork_getting_started/">Get Started</a>
+                  <a class="ready-btn page-scroll" href="https://metwork-framework.github.io/quickstart/">Get Started</a>
                 </div>
               </div>
             </div>
