--- a/main/index.html
+++ b/main/index.html
@@ -227,7 +227,7 @@
 										</a>
                   <h4>Webservices framework</h4>
                   <p>
-                  Quickly build REST micro-services, websites and APIs with the <strong>mfserv</strong> module. It supports up-to-date technologies like "asynchronous Python3", nodejs and Python-Django
+                  Quickly build REST micro-services, websites and APIs with the <strong>mfserv</strong> module. It supports up-to-date technologies like "asynchronous Python3", nodejs, nginx/openresty
                                   as well as standard Python2 or Python3 synchronous workers.
                   </p>
                 </div>
