--- a/main/index.html
+++ b/main/index.html
@@ -228,7 +228,7 @@
                   <h4>Webservices framework</h4>
                   <p>
                   Quickly build REST micro-services, websites and APIs with the <strong>mfserv</strong> module. It supports up-to-date technologies like "asynchronous Python3", nodejs, nginx/openresty
-                                  as well as standard Python2 or Python3 synchronous workers.
+                                  as well as popular Python2/Python3 frameworks like Flask or Django.
                   </p>
                 </div>
               </div>
