--- a/main/index.html
+++ b/main/index.html
@@ -245,7 +245,7 @@
 										</a>
                   <h4>Database bootstraping</h4>
                   <p>
-                  The <strong>mfbase</strong> module will get you started with a database in a few minutes. No heavy database administrator work needed! A fully functional database automatically configured for all your needs: geospatial extensions, NoSQL, big files storage... Supports PostgreSQL and Webdav.
+                  The <strong>mfbase</strong> module will get you started with a database in a few minutes. No heavy DBA work needed! A fully functional database automatically configured for all your needs: geospatial extensions, NoSQL, big files storage... Supports PostgreSQL and WebDAV.
                   </p>
                 </div>
               </div>
