--- a/main/index.html
+++ b/main/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h2 class="title2">Save time in building, running and monitoring your applications</h1>
+                  <h2 class="title2">Save time in building, running and monitoring your Linux server applications</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
