feat: change mfext more details link

--- a/main/index.html
+++ b/main/index.html
@@ -78,7 +78,7 @@
                   </li>
                   <li>
                     <a class="page-scroll" href="#services">Features</a>
-                  </li>                  
+                  </li>
                   <li>
                       <a class="page-scroll" href="#about">About</a>
                   </li>
@@ -268,7 +268,7 @@
                 </div>
                 <!-- end about-details -->
               </div>
-          </div>  
+          </div>
         </div>
       </div>
       <div class="row text-center">
@@ -306,7 +306,7 @@
                 </div>
                 <!-- end about-details -->
               </div>
-          </div>  
+          </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
                 <div class="about-move">
                   <div class="services-details">
@@ -318,7 +318,7 @@
                       <p>
                       The <strong>mfext</strong> module is a "dependencies package". It adds plenty of recent software to a Linux distribution (including old ones), for developers and scientists. You will never miss a library again on your development and production servers!
                       </p>
-                      <a href="https://github.com/metwork-framework/mfext/blob/master/README.md#mfext" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+                      <a href="http://metwork-framework.org/pub/metwork/continuous_integration/docs/master/mfext/010-whatis/" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                     </div>
                   </div>
                   <!-- end about-details -->
