feat: add links for mfbase, mfserv and mfadmin

--- a/main/index.html
+++ b/main/index.html
@@ -230,6 +230,7 @@
                   Quickly build REST micro-services, websites and APIs with the <strong>mfserv</strong> module. It supports up-to-date technologies like "asynchronous Python3", nodejs, nginx/openresty
                                   as well as popular Python2/Python3 frameworks like Flask or Django.
                   </p>
+                    <a href="https://github.com/metwork-framework/mfserv/blob/master/README.md#mfserv" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                 </div>
               </div>
               <!-- end about-details -->
@@ -247,6 +248,7 @@
                   <p>
                   The <strong>mfbase</strong> module will get you started with a database in a few minutes. No heavy DBA work needed! A fully functional database automatically configured for all your needs: geospatial extensions, NoSQL, big files storage... Supports PostgreSQL and WebDAV.
                   </p>
+                    <a href="https://github.com/metwork-framework/mfbase/blob/master/README.md#mfbase" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                 </div>
               </div>
               <!-- end about-details -->
@@ -285,6 +287,7 @@
                     <p>
                     Out of the box monitoring! The <strong>mfadmin</strong> module gives you dahsboards to explore metrics and logs of the system, of the middlewares and of your applications.
                     </p>
+                    <a href="https://github.com/metwork-framework/mfadmin/blob/master/README.md#mfadmin" class="btn btn-info btn-xs" target="_blank">More details&nbsp;<span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
                   </div>
                 </div>
                 <!-- end about-details -->
