--- a/main/index.html
+++ b/main/index.html
@@ -4,8 +4,17 @@
   <meta charset="utf-8">
   <title>MetWork Framework</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="Save time in building, running and monitoring your Linux server applications" name="description">
+
+  <!-- Meta Open Graph -->
+  <meta property="og:title" content="MetWork Framework"/>
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="MetWork Framework"/>
+  <meta property="og:description" content="Save time in building, running and monitoring your Linux server applications"/>
+  <meta property="og:url" content="https://metwork-framework.org"/>
+  <meta property="og:image" content="https://metwork-framework.org/public-website/img/share.png"/>
+  <meta property="og:image:width" content="1200"/>
+  <meta property="og:image:height" content="630"/>
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
